--- a/src/styles/layout/_projects.scss
+++ b/src/styles/layout/_projects.scss
@@ -5,6 +5,10 @@
   align-items: center;
   gap: 30px;
 
+  // @media all and (min-width: 768px) {
+
+  // }
+
   &_title {
     margin-top: 10px;
     font-size: 40px;
