--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -14,6 +14,7 @@
 @import "layout/header";
 @import "layout/landing";
 @import "layout/about";
+@import "layout/skills";
 @import "layout/projects";
 @import "layout/contact";
 @import "layout/footer";
@@ -65,4 +66,8 @@
   .showSmaller {
     display: none;
   }
+}
+
+.hidden {
+  display: none;
 }
