--- a/src/styles/core/variables.scss
+++ b/src/styles/core/variables.scss
@@ -54,3 +54,9 @@ USANDO EL @MIXIN
 //   flex-direction: row;
 //   justify-content: space-between;
 // }
+
+// #869b5b moss
+// #777d68 olive
+// #f6cab7 blush
+// #11401c dark green
+// #6d4337 brown
