--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -1,24 +1,30 @@
 .header {
   position: fixed;
   z-index: 2;
-  padding: 10px 0 0 10px;
+  padding: 15px 0 0 10px;
 
   @media all and (min-width: 768px) {
-    padding: 20px 0 0 20px;
+    padding: 25px 0 0 20px;
   }
 
   &_button {
-    background-color: $color-darklilac;
-    height: 30px;
-    width: 30px;
+    background-color: $color-lilac;
+    height: 40px;
+    width: 40px;
     border-radius: 15px;
     border-color: black;
 
     @media all and (min-width: 768px) {
-      height: 40px;
-      width: 40px;
+      height: 50px;
+      width: 50px;
       border-radius: 20px;
-      font-size: 20px;
+      font-size: 25px;
+    }
+
+    @media all and (min-width: 1024px) {
+      height: 55px;
+      width: 55px;
+      font-size: 30px;
     }
   }
 }
@@ -27,16 +33,28 @@
   // background-color: rgb(219, 76, 100);
   // margin-left: 0px;
   margin-top: 10px;
-  width: 10vw;
 
   &_list {
     padding-left: 1px;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+
+    @media all and (min-width: 768px) {
+      gap: 15px;
+    }
 
     &-link {
-      text-decoration: none;
+      text-decoration-line: none;
       padding: 2px;
       color: black;
-      background-color: rgba(255, 192, 203, 0.253);
+      background-color: #dbbfdeaf;
+      padding: 5px 10px;
+      border-radius: 10px;
+
+      @media all and (min-width: 1024px) {
+        font-size: 18px;
+      }
     }
   }
 }
