fix skills scss

--- a/src/styles/layout/_about.scss
+++ b/src/styles/layout/_about.scss
@@ -66,3 +66,5 @@
 //     align-items: center;
 //   }
 // }
+
+//que los div de texto estén dentro de otro div con un color de fondo que haga contraste
