fix projects scss

--- a/src/styles/layout/_contact.scss
+++ b/src/styles/layout/_contact.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   gap: 30px;
-  background-color: $color-darkgreen;
+  background-color: $color-darklilac;
 
   &_title {
     margin-top: 10px;
