--- a/src/styles/components/slide.scss
+++ b/src/styles/components/slide.scss
@@ -1,44 +1,80 @@
 .carousel {
   // background-color: red;
-  height: rem(550);
+  height: rem(600);
+
+  @media all and (min-width: 768px) {
+    width: 100vh;
+    height: rem(625);
+  }
+
+  @media all and (min-width: 1024px) {
+    height: rem(580);
+    width: 60rem;
+  }
+
   &_item {
     width: 100%;
     height: 100%;
+
+    @media all and (min-width: 768px) {
+      // background-color: red;
+      overflow: hidden;
+      height: 100%;
+      overflow: hidden;
+      width: 100%;
+    }
+
+    @media all and (min-width: 1024px) {
+      // background-color: red;
+      overflow: hidden;
+      height: 100%;
+      overflow: hidden;
+      width: 100%;
+    }
   }
 }
 
-.carousel-control-prev {
-  margin-left: 10px;
-}
-
-.carousel-control-next {
-  margin-right: 0;
-}
-// .carousel-control-next {
-//   margin-right: 0;
-// }
-
-.carousel-control-prev-icon {
-  margin-left: -20px;
-}
-
-.carousel-control-next-icon {
-  margin-right: 0;
-}
-
 .card {
-  margin: 20px 40px;
+  margin: 10px 40px;
   width: 240px;
+  border-radius: 20px;
+
+  @media all and (min-width: 768px) {
+    // background-color: red;
+    margin: 20px 15px;
+    width: calc(100% / 3);
+    border-radius: 20px;
+    // border-color: black;
+  }
+
+  @media all and (min-width: 1024px) {
+    // background-color: red;
+    margin: 20px 15px;
+    width: calc(100% / 3);
+  }
 
   &_imgWrapper {
     height: 50%;
+    padding: 20px 5px 10px 5px;
+    background-color: pink;
     // display: flex;
     // align-items: center;
     // justify-content: center;
 
+    @media all and (min-width: 768px) {
+    }
+
     &-img {
       max-width: 100%;
       max-height: 100%;
+
+      @media all and (min-width: 768px) {
+        width: 100%;
+      }
+
+      @media all and (min-width: 1024px) {
+        width: 100%;
+      }
     }
   }
 
@@ -55,13 +91,50 @@
 
     &-div {
       display: flex;
+      flex-direction: column;
       gap: 15px;
+
+      @media all and (min-width: 768px) {
+        display: flex;
+        flex-direction: column;
+        // width: 100%;
+      }
+
+      @media all and (min-width: 1024px) {
+        display: flex;
+        flex-direction: row;
+      }
     }
   }
 }
 
 .button {
   background-color: green;
+  height: 45px;
+
+  @media all and (min-width: 1024px) {
+    display: flex;
+    height: 65px;
+  }
+}
+
+// @media all (min-width: 0px) and (max-width: 768px) {}
+
+//EXTRAS
+.carousel-control-prev {
+  margin-left: 10px;
+}
+
+.carousel-control-next {
+  margin-right: 0;
+}
+
+.carousel-control-prev-icon {
+  margin-left: -20px;
+}
+
+.carousel-control-next-icon {
+  margin-right: 0;
 }
 
 @media all and (min-width: 768px) {
@@ -71,41 +144,22 @@
     display: flex;
   }
 
+  .carousel-control-prev {
+    width: 10px;
+    // padding-right: 40px;
+  }
+
+  .carousel-control-next {
+    width: 30px;
+  }
+
   .carousel-control-prev-icon {
-    margin-left: -190px;
+    margin-left: -55px;
   }
 
   .carousel-control-next-icon {
-    margin-right: -180px;
-  }
-
-  .carousel {
-    width: 100vh;
-    height: rem(580);
-    &_item {
-      // background-color: red;
-      overflow: hidden;
-      height: 100%;
-      overflow: hidden;
-      width: 100%;
-    }
-  }
-
-  .card {
-    background-color: red;
-    margin: 20px 15px;
-    width: calc(100% / 3);
-
-    &-img {
-      width: 100%;
-    }
-
-    &_body {
-      &-div {
-        display: flex;
-        flex-direction: column;
-      }
-    }
+    margin-right: -50px;
+    // width: 30px;
   }
 }
 
@@ -116,42 +170,24 @@
     display: flex;
   }
 
+  .carousel-control-prev {
+    width: 20px;
+    // padding-right: 40px;
+  }
+
+  .carousel-control-next {
+    width: 30px;
+  }
+
   .carousel-control-prev-icon {
-    margin-left: -190px;
+    margin-left: -60px;
   }
 
   .carousel-control-next-icon {
-    margin-right: -180px;
+    margin-right: -45px;
   }
 
-  .carousel {
-    height: rem(550);
-    width: 60rem;
-    &_item {
-      // background-color: red;
-      overflow: hidden;
-      height: 100%;
-      overflow: hidden;
-      width: 100%;
-    }
-  }
-
-  .card {
-    background-color: red;
-    margin: 20px 15px;
-    width: calc(100% / 3);
-
-    &-img {
-      width: 100%;
-    }
-
-    &_body {
-      &-div {
-        display: flex;
-        flex-direction: row;
-      }
-    }
-  }
+  // .carousel-indicators {
+  //   padding-top: 30px;
+  // }
 }
-
-// @media all (min-width: 0px) and (max-width: 768px) {}
