--- a/src/styles/layout/_contact.scss
+++ b/src/styles/layout/_contact.scss
@@ -1,9 +1,10 @@
 .contactSection {
+  // height: 50vh;
   padding: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 30px;
+  gap: 25px;
   background-color: $color-darklilac;
 
   &_title {
@@ -19,39 +20,68 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 10px;
 
-    // &-text {
-    //   // asdasd
-    // }
+    &-text {
+      padding-left: 5px;
+      font-size: 18px;
+      // text-align: center;
+
+      @media all and (min-width: 768px) {
+        font-size: 20px;
+      }
+    }
 
     &-elements {
       display: flex;
-      gap: 40px;
+      flex-direction: column;
+      // gap: 20px;
+
+      @media all and (min-width: 768px) {
+        flex-direction: row;
+        gap: 30px;
+      }
     }
   }
 
-  &_formDiv {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  // &_formDiv {
+  //   display: flex;
+  //   flex-direction: column;
+  //   align-items: center;
+  //   justify-content: center;
 
-    // &-text {
+  //   // &-text {
 
-    // }
-  }
+  //   // }
+  // }
 }
 
 .link_element {
   margin: 20px 0 20px 0;
-  background-color: pink;
-  height: 50px;
-  width: 100px;
+  background-color: #dbbfde6e;
+  height: 60px;
+  width: 120px;
   text-align: center;
-  padding-top: 10px;
+  padding-top: 15px;
+  border-radius: 20px;
+
+  @media all and (min-width: 768px) {
+    width: 160px;
+  }
+
+  @media all and (min-width: 1024px) {
+    width: 180px;
+  }
 
   &-link {
+    font-size: 18px;
     text-decoration: none;
+    color: black;
+    // margin-top: 50px;
+
+    @media all and (min-width: 768px) {
+      font-size: 20px;
+    }
   }
 }
 
