--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -1,10 +1,16 @@
 .footer {
   background-color: $color-darkblue;
-  padding: 20px;
+  padding: 30px 20px;
+  display: flex;
+  justify-content: space-between;
+
+  &_text {
+    font-size: 14px;
+    font-style: italic;
+  }
 
   &_list {
     display: flex;
-    justify-content: center;
     gap: 10px;
   }
 }
