--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -3,6 +3,8 @@
   padding: 30px 20px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  height: 5vh;
 
   &_text {
     font-size: 14px;
