--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -1,13 +1,13 @@
 .footer {
   background-color: $color-darkblue;
-  padding: 30px 20px;
+  padding: toRem(30) toRem(20);
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 5vh;
 
   &_text {
-    font-size: 14px;
+    font-size: toRem(14);
     font-style: italic;
   }
 
