--- a/src/styles/layout/_skills.scss
+++ b/src/styles/layout/_skills.scss
@@ -1,6 +1,6 @@
 .skillsSection {
   background-color: $color-darklilac;
-  padding: 20px;
+  padding: toRem(20);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -8,11 +8,11 @@
   width: 100%;
 
   @media all and (min-width: 768px) {
-    padding-bottom: 45px;
+    padding-bottom: toRem(45);
   }
 
   @media all and (min-width: 1024px) {
-    padding: 35px 50px 50px 50px;
+    padding: toRem(35) toRem(50) toRem(50) toRem(50);
   }
 
   &_div {
@@ -28,18 +28,18 @@
   }
 
   &_title {
-    margin-top: 10px;
-    font-size: 40px;
+    margin-top: toRem(10);
+    font-size: toRem(40);
 
     @media all and (min-width: 768px) {
-      font-size: 50px;
-      margin-top: 0;
+      font-size: toRem(50);
+      margin-top: toRem(0);
     }
   }
 
   &_soft {
     width: 100%;
-    padding-top: 30px;
+    padding-top: toRem(30);
     background-color: $color-lilac;
     display: flex;
     flex-direction: column;
@@ -52,23 +52,23 @@
     }
 
     &-title {
-      font-size: 20px;
-      margin-bottom: 15px;
+      font-size: toRem(20);
+      margin-bottom: toRem(15);
 
       @media all and (min-width: 768px) {
-        margin-top: 10px;
-        font-size: 25px;
+        margin-top: toRem(10);
+        font-size: toRem(25);
       }
 
       @media all and (min-width: 1024px) {
-        font-size: 30px;
+        font-size: toRem(30);
       }
     }
   }
 
   &_tech {
     width: 100%;
-    padding: 30px 20px;
+    padding: toRem(30) toRem(20);
     background-color: $color-lilac;
     display: flex;
     flex-direction: column;
@@ -81,33 +81,33 @@
     }
 
     &-title {
-      font-size: 20px;
-      margin-bottom: 15px;
+      font-size: toRem(20);
+      margin-bottom: toRem(15);
 
       @media all and (min-width: 768px) {
-        margin-top: 10px;
-        font-size: 25px;
+        margin-top: toRem(10);
+        font-size: toRem(25);
       }
 
       @media all and (min-width: 1024px) {
-        font-size: 30px;
+        font-size: toRem(30);
       }
     }
 
     &-list {
-      margin-top: 10px;
+      margin-top: toRem(10);
       display: flex;
       flex-wrap: wrap;
       gap: 20px;
 
       @media all and (min-width: 768px) {
         gap: 30px;
-        padding: 10px 20px;
+        padding: toRem(10) toRem(20);
       }
 
       @media all and (min-width: 1024px) {
         gap: 40px;
-        padding: 10px 0 10px 55px;
+        padding: toRem(10) toRem(0) toRem(10) toRem(55);
       }
     }
   }
@@ -121,19 +121,19 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 10px 0;
+  padding: toRem(10) toRem(0);
 
   &-element {
     line-height: 1.8;
 
     @media all and (min-width: 768px) {
-      padding: 0 10px;
-      font-size: 18px;
+      padding: toRem(0) toRem(10);
+      font-size: toRem(18);
       line-height: 2;
     }
 
     @media all and (min-width: 768px) {
-      font-size: 20px;
+      font-size: toRem(20);
     }
   }
 }
