--- a/src/styles/layout/_about.scss
+++ b/src/styles/layout/_about.scss
@@ -1,6 +1,6 @@
 .aboutMeSection {
   background-color: $color-darkgreen;
-  padding: 20px;
+  padding: toRem(20);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -8,17 +8,17 @@
   gap: 30px;
 
   @media all and (min-width: 768px) {
-    padding: 40px;
+    padding: toRem(40);
     gap: 45px;
   }
 
   &_title {
-    margin-top: 10px;
-    font-size: 40px;
+    margin-top: toRem(10);
+    font-size: toRem(40);
 
     @media all and (min-width: 768px) {
-      font-size: 50px;
-      margin-top: 0;
+      font-size: toRem(50);
+      margin-top: toRem(0);
     }
   }
 
@@ -59,12 +59,16 @@
   @media all and (min-width: 768px) {
     // height: 300px;
   }
+
+  @media all and (min-width: 1024px) {
+    height: 200px;
+  }
 }
 
-// .div-text {
-//   @media all and (max-width: 1024px) {
-//     align-items: center;
-//   }
-// }
+.div-text {
+  @media all and (max-width: 1024px) {
+    // align-items: center;
+  }
+}
 
 //que los div de texto estén dentro de otro div con un color de fondo que haga contraste
