--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -1,10 +1,10 @@
 .header {
   position: fixed;
   z-index: 2;
-  padding: 15px 0 0 10px;
+  padding: toRem(15) 0 0 toRem(10);
 
   @media all and (min-width: 768px) {
-    padding: 25px 0 0 20px;
+    padding: toRem(25) 0 0 toRem(20);
   }
 
   &_button {
@@ -18,13 +18,13 @@
       height: 50px;
       width: 50px;
       border-radius: 20px;
-      font-size: 25px;
+      font-size: toRem(25);
     }
 
     @media all and (min-width: 1024px) {
       height: 55px;
       width: 55px;
-      font-size: 30px;
+      font-size: toRem(30);
     }
   }
 }
@@ -32,10 +32,10 @@
 .nav {
   // background-color: rgb(219, 76, 100);
   // margin-left: 0px;
-  margin-top: 10px;
+  margin-top: toRem(10);
 
   &_list {
-    padding-left: 1px;
+    padding-left: toRem(1);
     display: flex;
     flex-direction: column;
     gap: 12px;
@@ -49,11 +49,11 @@
       padding: 2px;
       color: black;
       background-color: #dbbfdeaf;
-      padding: 5px 10px;
+      padding: toRem(5) toRem(10);
       border-radius: 10px;
 
       @media all and (min-width: 1024px) {
-        font-size: 18px;
+        font-size: toRem(18);
       }
     }
   }
