--- a/src/styles/core/variables.scss
+++ b/src/styles/core/variables.scss
@@ -7,6 +7,15 @@ $font-secondary: "Shadows Into Light", cursive;
 // $color-bg: #f3f4f5;
 // $color-secondary: #999;
 
+$primary-color: #ad76e3;
+$secondary-color: white;
+
+$statement-color: #acf069;
+$icons-color: #584d63;
+$primary-font-color: #2f213d;
+
+//Color gradiante (lila - azul): Linear horizontal de AD76E3 a 8676E3
+
 $color-lilac: #dbbfde; //(lila claro)
 $color-darkgreen: #a0b59f; //(verde oscuro)
 $color-darkblue: #91b3b1; //(azul oscuro)
