--- a/src/styles/layout/_contact.scss
+++ b/src/styles/layout/_contact.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
   gap: 25px;
-  background-color: $color-darklilac;
+  background-color: $secondary-color;
 
   &_title {
     margin-top: toRem(10);
