--- a/src/styles/layout/_about.scss
+++ b/src/styles/layout/_about.scss
@@ -1,5 +1,5 @@
 .aboutMeSection {
-  background-color: $color-darkgreen;
+  background-color: $primary-color;
   padding: toRem(20);
   display: flex;
   flex-direction: column;
@@ -15,6 +15,7 @@
   &_title {
     margin-top: toRem(10);
     font-size: toRem(40);
+    color: $secondary-color;
 
     @media all and (min-width: 768px) {
       font-size: toRem(50);
@@ -44,6 +45,10 @@
         gap: 30px;
       }
     }
+
+    &-text {
+      color: $secondary-color;
+    }
   }
 }
 
@@ -66,6 +71,7 @@
 }
 
 .div-text {
+  // color: $secondary-color;
   @media all and (max-width: 1024px) {
     // align-items: center;
   }
