--- a/src/styles/layout/_skills.scss
+++ b/src/styles/layout/_skills.scss
@@ -1,5 +1,5 @@
 .skillsSection {
-  background-color: $color-darklilac;
+  background-color: $secondary-color;
   padding: toRem(20);
   display: flex;
   flex-direction: column;
